# microscope-control

./: .gitignore  LICENSE  README.md  README_asi_stage_integration.md  pyproject.toml
MDA/: tzc.yaml  tzc_saving.yaml  tzc_with_saving.yaml
docs/: DetailedMicromanagerCalls.md  MVC-RefactoringPlan.md  Roadmap_ Simultaneous Multi-Camera Acquisition.md  v0p1_Roadmap.md  v0p3_Roadmap.md
hardware_profiles/: 20250523-OPM.cfg  20250523-OPM_7channelShutter.cfg  20250707-OPM.cfg  default_config.yml  demo.cfg
initial_testing_scripts/: camera_testing.py  camera_triggering.py  crisp_testing.py  external_triggering.py  galvo_scan.py  galvo_scan_laser_toggling.py  galvo_scan_preset_logic.py  galvo_scan_preset_logic_v2.py  galvo_scan_with_laser.py  hardware.py  hardware_v2.py  plogic_BNCcontrol.py  plogic_clock_generator.py  plogic_control.py  plogic_dual_clock_testing.py
initial_testing_scripts/plogic/: one_shot_laser.py
microscope_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
old_version/hardware/camera/: controller.py
old_version/hardware/common/: __init__.py  base_asi_commands.py
old_version/hardware/crisp/: controller.py
old_version/hardware/engine/: __init__.py  manager.py
old_version/hardware/galvo/: __init__.py  asi_commands.py  controller.py  models.py
old_version/hardware/piezo/: controller.py  models.py
old_version/hardware/plogic/: __init__.py
old_version/hardware/stage/: __init__.py  asi_commands.py  controller.py
old_version/initial_testing/: one_shot_laser.py  plogic_serial.py  pymmcore_widgets_test.py  widgets_demo.py
old_version/initial_testing/learning/: dualNRT.py  dualNRT_globalshutter.py  dualNRT_globalshutter_V2.py
old_version/ui/: main_window.py
src/microscope/: __init__.py  __main__.py  camera_testing.py  config.py  crisp_testing.py  display.py  engine.py  external_triggering.py  galvo_scan_preset_logic_v2.py  galvo_scan_with_laser.py  gui.py  hardware.py  hardware_control.py  hardware_v2.py  laser_only_testing.py  laser_testing.py  live_engine.py  main.py  navigation_panel.py  plogic_clock_generator.py  plogic_dual_clock_testing.py  run_gui.py  settings.py  test_script.py
src/microscope/acquisition/: __init__.py  engine.py  worker.py
src/microscope/application/: __init__.py  mda_setup.py
src/microscope/asi_z_stack/: asi_controller.py  common.py  main.py
src/microscope/controller/: __init__.py  action_interceptor.py  actions.py  application_controller.py  hardware_controller.py  main.py  mda.py  mda_controller.py
src/microscope/core/: __init__.py  actions.py  constants.py  datastore.py  engine.py  hardware.py  settings.py  widgets.py
src/microscope/core/engine/: __init__.py  main.py  worker.py
src/microscope/core/hardware/: __init__.py  camera.py  galvo.py  plogic.py  utils.py
src/microscope/hardware/: __init__.py  asi_crisp.py  asi_galvo.py  asi_tiger_stage.py  base.py  camera.py  core.py  crisp.py  exceptions.py  galvo.py  hal.py  hardware_control.py  initializer.py  plogic.py  stage.py
src/microscope/hardware/camera/: __init__.py  controller.py
src/microscope/hardware/crisp/: __init__.py  asi_commands.py  models.py
src/microscope/hardware/engine/: manager.py  plans.py  state.py
src/microscope/hardware/galvo/: __init__.py  asi_commands.py  controller.py  models.py
src/microscope/hardware/piezo/: models.py  (+3 more)
src/microscope/initial_testing/: _stage_widget.py  dispim_call.py  one_shot_laser.py  simple_test.py  stage_widget.py  superqt_test.py
src/microscope/initial_testing_scripts/: camera_testing.py  camera_triggering.py  crisp_testing.py  external_triggering.py  galvo_scan.py  galvo_scan_preset_logic.py  hardware.py  hardware_v2.py  plogic_clock_generator.py  plogic_control.py
src/microscope/model/: hardware_model.py
src/microscope/plogic/: one_shot_laser.py
src/microscope/ui/: __main__.py  main_window.py  qt_logger.py  styles.py
src/microscope/view/: main_view.py
src/microscope_control/: __init__.py  napari.yaml
src/microscope_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/microscope_control/hardware/: stage.py
src/microscope_control/widgets/: __init__.py  stage_control_widget.py
tests/hardware/: test_stage.py
tests/widgets/: test_stage_control_widget.py
(+9 files in other folders)
